tests/ui/03-format-html-blocked.stderr
error: Azumi: format!() detected building HTML/CSS/JS strings.

       Using format!() to build web content defeats Azumi's compile-time safety.
       If you need to format a value for display, do it outside the html! macro
       and pass the result as a variable.

       ✅ Correct patterns:

       // For dynamic text - use html! interpolation:
       html! { <p>{value}</p> }

       // For dynamic attributes - use expression:
       html! { <a href={url}>{label}</a> }

       // For JSON data - use json_data! macro:
       html! { {azumi::json_data!("MY_DATA" = &data)} }

       // For CSS - use inline_css! macro:
       html! { {azumi::inline_css!(HUB_GLOBAL_CSS)} }

       // For JavaScript - use inline_script! macro:
       html! { {azumi::inline_script!(AI_HUB_COPY_JS)} }

       ❌ Wrong pattern:

       html! { {format!("<div>{}</div>", value)} }

       See: AI_GUIDE_FOR_WRITING_AZUMI.md
 --> tests/ui/03-format-html-blocked.rs:6:12
  |
6 |         <p>{format!("<div>{}</div>", value)}</p>
  |            ^
