tests/ui/03-format-html-blocked.rs
use azumi::html;

fn main() {
    let value = "test";
    let _component = html! {
        <p>{format!("<div>{}</div>", value)}</p>
    };
}
